public/global.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&display=swap');

html {
  font-family: 'Fira Sans', sans-serif;
  font-size: 16px;
  margin: 0;
}

body, p {
  margin: 0;
}

:root {
  --blue: rgb(0, 99, 206);
  --dark-blue: rgb(1, 51, 104);
  --light-gray: #EEEEEE;
  --medium-gray: #E5E5E5;
  --dark-gray: #555555;
  --red: red;
}

a {
  color: var(--blue);
}

a:hover {
  text-decoration: none;
}

button {
  border: 1px solid var(--blue);
  border-radius: 5px;
  color: var(--blue);
  background-color: transparent;
  text-align: center;
  cursor: pointer;
  margin: 0 2px;
  font-size: 1em;
  padding: 1px 6px;
  font-family : inherit;
}

button:hover:enabled {
  background-color: var(--blue);
  color: white;
}

button:active:enabled {
  border-color: var(--dark-blue);
  background-color: var(--dark-blue);
  color: white;
}

button:disabled {
  cursor: not-allowed;
  color: var(--dark-gray);
  border-color: var(--dark-gray);
}

.error {
  color: var(--red);
}

.large {
  font-size: 1.125rem;
}

.small {
  font-size: 0.875rem;
}

.bold {
  font-weight: 500;
}

.label {
  margin-top: 1em;
  margin-bottom: 0.25em;
}

.sub-label {
  margin-top: 0.25em;
  margin-bottom: 0.25em;
}

.gap {
  flex-grow: 1;
}

.icon {
  width: 1em;
  height: 1em;
}

.cutoff {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

/*
https://css-tricks.com/almanac/properties/w/word-break/
https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
*/
.hyphen {
  overflow-wrap: break-word;
  word-wrap: break-word;

  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
}

